tests/base/parser/bad/lib/lmodule-version-with.scillib
scilla_version 0

(* missing library declaration *)

type House =
| Kind of String
